[package]
name = "yogi"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
bench = ["firestorm/enable_system_time"]

[profile.release]
lto = "fat"

[dependencies]
thiserror = "1.0.26"
petgraph = "0.6.0"
ahash = "0.7.4"
firestorm = "0.4.6"
nohash-hasher = "0.2.0"
core_affinity = "0.5.10"
static_assertions = "1.1.0"
