[package]
name = "yogi"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
bench = ["firestorm/enable_system_time"]

[profile.test]
opt-level = 0

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"

[dependencies]
thiserror = "1.0.26"
petgraph = "0.6.0"
ahash = "0.7.4"
firestorm = "0.5.0"
nohash-hasher = "0.2.0"
core_affinity = "0.5.10"
static_assertions = "1.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
derive_more = "0.99.16"
anyhow = "1.0.45"
arrayvec = "0.7.2"
atomic_refcell = "0.1.8"
clap = {version = "3.0.8", features = ["derive"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
html-escape = "0.2.9"
